<resources>
    <string name="app_name">Room Using RxJava</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_user_age">Enter user age</string>
    <string name="add">Add</string>
    <string name="enter_user_id_to_update">Enter user id to update</string>
    <string name="delete">Delete</string>
    <string name="deleteall">delete All</string>
</resources>